--- a/theme/viewfield.css
+++ b/theme/viewfield.css
@@ -1,4 +1,6 @@
-tr.odd  .viewfield-select .form-item,
+/* $Id$ */
+
+tr.odd .viewfield-select .form-item,
 tr.even .viewfield-select .form-item {
   white-space: normal;
 }
