--- a/theme/viewfield.css
+++ b/theme/viewfield.css
@@ -1,5 +1,4 @@
 
-tr.odd .viewfield-select .form-item,
-tr.even .viewfield-select .form-item {
+.field-widget-viewfield-select table .form-item {
   white-space: normal;
 }
