--- a/templates/viewfield-item.html.twig
+++ b/templates/viewfield-item.html.twig
@@ -15,6 +15,8 @@
  * - title_suffix: Additional output populated by modules, intended to be
  *   displayed after the main title tag that appears in the template.
  * - delta: Ordinal specifying the item number in the field.
+ * - entity: The entity object.
+ * - view_mode: View mode; e.g., 'full', 'teaser', etc.
  *
  * @see template_preprocess_viewfield_item()
  *
