--- a/templates/viewfield.html.twig
+++ b/templates/viewfield.html.twig
@@ -25,12 +25,11 @@
  * - title_attributes: HTML attributes for the title.
  * - label: The label for the field.
  * - multiple: TRUE if a field can contain multiple items.
- * - items: List of all the field items. Each item contains:
- *   - attributes: List of HTML attributes for each item.
- *   - content: The field item's content.
+ * - items: List of all the viewfield items.
+ * - entity: The entity to which the field belongs.
  * - entity_type: The entity type to which the field belongs.
+ * - bundle: The entity bundle to which the field belongs.
  * - field_name: The name of the field.
- * - field_type: The type of the field.
  * - label_display: The display settings for the label.
  *
  *
@@ -39,10 +38,6 @@
 #}
 {%
   set classes = [
-    'viewfield',
-    'viewfield--name-' ~ field_name|clean_class,
-    'viewfield--type-' ~ field_type|clean_class,
-    'viewfield--label-' ~ label_display,
     'field',
     'field--name-' ~ field_name|clean_class,
     'field--type-' ~ field_type|clean_class,
@@ -51,7 +46,6 @@
 %}
 {%
   set title_classes = [
-    'viewfield__label',
     'field__label',
     label_display == 'visually_hidden' ? 'visually-hidden',
   ]
@@ -60,7 +54,7 @@
 {% if label_hidden %}
   <div{{ attributes.addClass(classes) }}>
     {% if multiple %}
-    <div class="viewfield__items field__items">
+    <div class="field__items">
       {% endif %}
       {% for item in items %}
         {{ item }}
@@ -75,7 +69,7 @@
     <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
     {{ title_suffix }}
     {% if multiple %}
-      <div class="viewfield__items field__items">
+      <div class="field__items">
     {% endif %}
     {% for item in items %}
       {{ item }}
