--- a/templates/viewfield.html.twig
+++ b/templates/viewfield.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Theme override for a viewfield.
+ * Default theme implementation for a viewfield
  *
  * To override output, copy the "viewfield.html.twig" from the templates directory
  * to your theme's directory and customize it, just like customizing other
