Issue #2220929 by keithm: Changed template to make theming a bit simpler.

--- a/templates/viewfield-item.html.twig
+++ b/templates/viewfield-item.html.twig
@@ -41,13 +41,12 @@
 {%
 set classes = [
   'field__item',
-  'viewfield__item',
-  'viewfield__item-label-' ~ label_display,
+  'field__item-label-' ~ label_display,
 ]
 %}
 {%
 set title_classes = [
-  'viewfield__item__label',
+  'field__item__label',
   label_display == 'visually_hidden' ? 'visually-hidden',
 ]
 %}
