Issue #2220929 by keithm: Added contextual link to viewfield item.

--- a/templates/viewfield-item.html.twig
+++ b/templates/viewfield-item.html.twig
@@ -51,15 +51,11 @@ set title_classes = [
 ]
 %}
 
-{% if label_hidden %}
-  <div{{ attributes.addClass(classes) }}>
-    {{ content }}
-  </div>
-{% else %}
-  <div{{ attributes.addClass(classes) }}>
-    {{ title_prefix }}
+<div{{ attributes.addClass(classes) }}>
+  {{ title_prefix }}
+  {% if not label_hidden %}
     <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
-    {{ title_suffix }}
-    {{ content }}
-  </div>
-{% endif %}
+  {% endif %}
+  {{ title_suffix }}
+  {{ content }}
+</div>
